examples/personal/mitchpash/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: glance
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: glance-data
